styles and responsive in modal - need to fix truncate text on mobile

--- a/public/scss/_base.scss
+++ b/public/scss/_base.scss
@@ -6,16 +6,6 @@
   box-sizing: inherit;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  font-weight: inherit;
-}
-
 ul {
   list-style-type: none;
 }
