--- a/public/scss/_typography.scss
+++ b/public/scss/_typography.scss
@@ -1,8 +1,12 @@
 body {
   font-family: var(--ff-main);
-  font-size: 1.6rem;
   font-weight: var(--fw-regular);
   color: var(--rose-900);
+}
+
+::selection {
+  background: var(--rose-100);
+  color: var(--rose-500);
 }
 
 .text {
